Fixed issues with iPad usability and with detailed progress not showing all quizzes

--- a/app/styles/content_navigator.css
+++ b/app/styles/content_navigator.css
@@ -51,6 +51,7 @@ li{
   -o-transition: all 0.1s ease-in-out;
   -ms-transition: all 0.1s ease-in-out;
   transition: all 0.1s ease-in-out;
+  -webkit-overflow-scrolling: touch;
 }
 .containeropen{
   /*height: 88%;*/
